2008-01-08  Sancho Lerena  <slerena@gmail.com>

        * Config.pm: Updated version to 1.3.1-dev
        
        * DB.pm: Added generic db function give_db_free(). keepalive modules area
        managed differently. Now have type 100 and update only tagente_estado table
        discarding historic data, but are managed like other module. Update data (OK)
        when updating tagent_access. Old Keepalive modules are deprecated and not used
        since from 1.2 version was not working :(

        * pandora_snmpconsole: Some small fixes from unknown user.

        * pandora_server: Ignore files with size 0 (expect to solve problems with 
        zerobyte BADXML files, need more testing...). Keepalive module management
        are now managed in a different way. This works for me but needs more testing.

        * pandora_network: Minimal optimization in locking for SNMP threads.

2007-12-19  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_network: Fixed bug #1854340, problem with file descriptors
	on heavily loaded network servers. Other minor issues added.

	* lib/Config.pm: Upgraded version number to 1.4-dev

2007-12-17  Ramon Novoa  <rnovoa@artica.es>

	* util/n2p.pl: Added to repository. Nagios to Pandora FMS migration
	script.

	* util/n2p.README: Added to repository. Nagios to Pandora FMS migration
	guide.

2007-12-04  Sancho Lerena  <slerena@gmail.com>

	*  lib/PandoraFMS/Config.pm, bin/pandora_network: This little portion of
	code should fix problem detected in some very extrange module "blackout" 
	effect reported by Corona. Need check and testing before get as final.

2007-11-20  Manuel Arostegui <marostegui@artica.es>

	* pandora_snmpconsole,pandora_server,pandora_recon,pandora_network: Fixed
	  bug #1822659.

2007-11-19  Sancho Lerena <slerena@gmail.com>

	* pandora_network: Fixed problem with default retries of SNMP library. Now is 0
	
2007-10-09  Sancho Lerena <slerena@gmail.com>
